# backend_hackathon

./: .gitignore  README.md  pyproject.toml
src/: config.py  main.py
src/api/: __init__.py  auth.py  dishes.py  orders.py  users.py
src/crud/: __init__.py  dish.py  order.py  user.py
src/database/: db.py
src/models/: dish.py  order.py  user.py
src/schemas/: dish.py  order.py  user.py
src/utils/: auth.py  enums.py
